--- a/index.html
+++ b/index.html
@@ -7,16 +7,13 @@
         <title>Flexbox</title>
     </head>
     <body>
-        <div class="idk">
-            <div class="idk2 1">.</div>
-            <div class="idk2 2">..</div>
-            <div class="idk2 3">...</div>
+        <header>Best Pets to Have</header>
+        <div class="container">
+            <div class="pet">Bunny</div>
+            <img scr="" alt="bunny">
+            <div class="pet">Puppy</div>
+            <div class="pet">Fish</div>
         </div>
         <br/>
-        <div class="idk2">
-            <div class="idk2 4">....</div>
-            <div class="idk2 5">.....</div>
-            <div class="idk2 6">......</div>
-        </div>
     </body>
 </html>
