--- a/index.html
+++ b/index.html
@@ -9,11 +9,24 @@
     <body>
         <header>Best Pets to Have</header>
         <div class="container">
-            <div class="pet">Bunny</div>
-            <img scr="" alt="bunny">
-            <div class="pet">Puppy</div>
-            <div class="pet">Fish</div>
+            <div class="pet">Rabbit
+                <p>
+                    <img scr="rabbit.jpg" alt="rabbit">
+                </p>
+            </div>
+            <div class="pet">Dog
+                <p> 
+                    <img scr="dog.jpg" alt="dog">
+                </p>
+            </div>
+            <div class="pet">Fish
+                <p>
+                    <img scr="fish.jpg" alt="fish">
+                </p>
+            </div>
         </div>
         <br/>
+        <div class="container">
+            <div class="" </div>
     </body>
 </html>
