--- a/index.html
+++ b/index.html
@@ -4,25 +4,29 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scal=1.0" />
         <link rel="stylesheet" href="style.css" />
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bitter&display=swap" rel="stylesheet">
         <title>Flexbox</title>
     </head>
     <body>
-        <header>Best Pets to Have</header>
+        <div class="header">
+            <h1>Best Pets to Have</h1>
+        </div>
         <div class="container">
             <div class="pet">Rabbit
-                <p>
-                    <img scr="rabbit.jpg" alt="rabbit">
-                </p>
+                    <img 
+                    src="images/rabbit.jpg" 
+                    alt="rabbit">
             </div>
             <div class="pet">Dog
-                <p> 
-                    <img scr="dog.jpg" alt="dog">
-                </p>
+                    <img 
+                    src="images/dog.jpg" 
+                    alt="dog">
             </div>
-            <div class="pet">Fish
-                <p>
-                    <img scr="fish.jpg" alt="fish">
-                </p>
+            <div class="pet">Bird
+                    <img 
+                    src="images/bird.jpg" alt="bird">
             </div>
         </div>
         <br/>
