--- a/index.html
+++ b/index.html
@@ -31,6 +31,37 @@
         </div>
         <br/>
         <div class="container">
-            <div class="" </div>
+            <div class="pet">Guinea Pig
+                    <img 
+                    src="images/guineapig.jpg" 
+                    alt="guineapig">
+            </div>
+            <div class="pet">Cat
+                    <img 
+                    src="images/cat.jpg" 
+                    alt="cat">
+            </div>
+            <div class="pet">Hamster
+                <img 
+                src="images/hamster.jpg" 
+                alt="hamster">
+            </div>
+        </div>
+        <br/>
+        <div class="container">
+            <div class="pet">Frog
+                    <img 
+                    src="images/frog.jpg" 
+                    alt="frog">
+            </div>
+            <div class="pet">Fish
+                <img 
+                src="images/fish.jpg" alt="fish">
+            </div>
+            <div class="pet">Turtle
+                    <img 
+                    src="images/turtle.jpg" alt="turtle">
+            </div>
+        </div>
     </body>
 </html>
