--- a/index.html
+++ b/index.html
@@ -15,58 +15,70 @@
         </div>
         <div class="container">
             <div class="pet">Rabbit
+                <button class="button">Bunny</button>
                     <img 
                     src="images/rabbit.jpg" 
                     alt="rabbit">
             </div>
             <br>
             <div class="pet">Dog
+                <button class="button">Puppy</button>
                     <img 
                     src="images/dog.jpg" 
                     alt="dog">
             </div>
             <br>
             <div class="pet">Bird
+                <button class="button">Hatchling</button>
                     <img 
-                    src="images/bird.jpg" alt="bird">
+                    src="images/bird.jpg" 
+                    alt="bird">
             </div>
         </div>
         <br>
         <div class="container">
             <div class="pet">Guinea Pig
+                <button class="button">Pup</button>
                     <img 
                     src="images/guineapig.jpg" 
                     alt="guineapig">
             </div>
             <br>
             <div class="pet">Cat
+                <button class="button">Kitten</button>
                     <img 
                     src="images/cat.jpg" 
                     alt="cat">
             </div>
             <br>
             <div class="pet">Hamster
-                <img 
-                src="images/hamster.jpg" 
-                alt="hamster">
+                <button class="button">Pup</button>
+                    <img 
+                    src="images/hamster.jpg" 
+                    alt="hamster">
             </div>
         </div>
         <br>
         <div class="container">
             <div class="pet">Frog
+                <button class="button">Tadpoles</button>
                     <img 
                     src="images/frog.jpg" 
                     alt="frog">
             </div>
             <br>
             <div class="pet">Fish
-                <img 
-                src="images/fish.jpg" alt="fish">
+                <button class="button">Fry</button>
+                    <img 
+                    src="images/fish.jpg" 
+                    alt="fish">
             </div>
             <br>
             <div class="pet">Turtle
+                <button class="button">Hatchling</button>
                     <img 
-                    src="images/turtle.jpg" alt="turtle">
+                    src="images/turtle.jpg" 
+                    alt="turtle">
             </div>
         </div>
     </body>
