--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
         <title>Best Pets To Have</title>
     </head>
     <body>
-        <div class="header">
-            <h1>Best Pets to Have</h1>
-        </div>
+        <header class="header">
+            <h1 class="header-title">Best Pets to Have</h1>
+        </header>
+        
         <div class="container">
             <div class="pet">Rabbit
                 <button class="button1">Pet</button>
